--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
-:root{
+html{
   --color-canvas-default: aqua;
   --color-fg-default: darkblue;
 }
 
 body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     font-size: 14px;
     line-height: 1.5;
